[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "async-lru>=2.0.0",
    "beanie>=1.25.0",
    "beautifulsoup4>=4.12.0",
    "cryptography>=3.4.8",
    "curl-cffi>=0.14.0",
    "debugpy>=1.8.17",
    "e2b>=1.0.0",
    "fastapi>=0.121.2",
    "httpx>=0.28.1",
    "langchain>=1.0.7",
    "langchain-anthropic>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=0.3.0",
    "langchain-deepseek>=1.0.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "markdownify>=1.2.0",
    "mcp>=1.9.0",
    "openai>=2.8.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.8.0",
    "pymongo>=4.14.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "redis>=5.0.1",
    "rich>=14.2.0",
    "sse-starlette>=3.0.3",
    "tavily-python>=0.5.0",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
